@@ -24,3 +24,7 @@ See <<rebalance-listeners>> for more information.
 
 For convenience a test class level `@EmbeddedKafka` annotation is provided with the purpose to register `KafkaEmbedded` as a bean.
 See <<testing>> for more information.
+==== After rollback processing
+
+Starting with _version 2.0.5_, a new `AfterRollbackProcessor` strategy is provided - see <<after-rollback>> for more information.
+
